# idx_finder

./: CMakeLists.txt  README.md  cleaning_test.py  package.xml  requirements.txt
config/: index_finder.yaml
scripts/: cropper.py  histogram_localizer.py  histogram_sorter.py  idx_finder.py  idx_finder_client.py  idx_finder_server.py  idx_finder_tester.py  ocr_localizer.py  tight_crop.py
